--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,118 +1,29 @@
 {
-    "LoginTo": "Login to your Account",
-    "GetStarted": "Get started with our app, just create an account and enjoy the experience",
-    "ResetPasswordMessage": "Enter your email address, then you can receive new credetial by email",
-    "ResetPassword": "Reset Password",
-    "Email": "Email",
-    "Password": "Password",
-    "Country": "Country",
-    "CompanyName": "Company Name",
-    "Team": "Team",
-    "CompanyType": "Legal Form",
-    "FederalState": "Federal State",
-    "Street": "Street",
-    "House": "House",
-    "ZIPCode": "Zip Code",
-    "TaxID": "Tax ID",
-    "Trade": "Trade",
-    "Employee": "Employee",
-    "City": "City",
-    "Website": "Website URL",
-    "WorkOption": "Work Option",
-    "Next": "Next",
-    "Back": "Back",
-    "SignIn": "Sign In",
-    "Reset": "Reset",
-    "Or": "Or",
-    "SignUp": "Sign Up",
-    "Terms": "Terms of use & Conditions",
-    "FirstName": "First Name",
-    "LastName": "Last Name",
-    "Phone": "Phone Number",
-    "Position": "Job Title",
-    "Department": "Department",
-    "Description": "Description",
-    "SubmitRegister": "Submit Registration",
-    "CompanyInfo": "Company Info",
-    "Representative": "Representative",
-    "Documents": "Documents",
-    "Complete": "Complete",
-    "ForgotPassword": "Forgot your password?",
-
     "English": "English",
     "Germany": "Germany",
     "Poland": "Poland",
     "Slovakia": "Slovakia",
-    "Profile": "Profile",
-    "Settings": "Settings",
-    "LogOut": "Log out",
-
-    "Dashboard": "Dashboard",
-    "Vendors": "Vendors",
-    "UserManagement": "User Management",
-    "ScopeOfServicesAndTrades": "Scope of Services and Trades",
-    "TemplateManagement": "Template Management",
-    "CountryRequirements": "Country Requirements",
-    "ActivityLog": "Activity Log",
-    "ProjectManagement": "Project Management",
-    "CompanyInformation": "Company Information",
-    "TeamManagement": "Team Management",
-    "Customer/Construction": "Customer/Construction Site Management",
-    "AllVendors": "All Vendors",
-    "InvitedVendors": "Invited Vendors",
-    "VendorWithDocumentSubmitted": "Vendor with Document Submitted",
-    "CompanyDetailCompleted": "Company Detail Completed",
-    "VendorsWithContractSubmitted": "Vendors with Contract Submitted",
-    "ReadyForExecution": "Ready for Execution",
-
-    "FilterByStatus": "Filter by status",
-    "All": "All",
-    "Invited": "Invited",
-    "DocumentsRejected": "Documents Rejected",
-    "DocumentUploaded": "Document Uploaded",
-    "ProfileApproved": "Profile Approved",
-    "ProfileRejected": "Profile Rejected",
-    "AllDocumentsApproved": "All Documents Approved",
-    "WaitingForVendorSignature": "Waiting for Vendor Signature",
-    "WaitingForGesysSignature": "Waiting for Gesys Signature",
-    "AllCompleted": "All Completed",
-    "Name": "Name",
-    "Contact": "Contact",
-    "ScopeOfServices": "Scope Of Services",
-    "Status": "Status",
-    "Since": "Since",
-    "NewVendor": "New Vendor",
-    "Details": "Details",
-    "CreateNewVendor": "Create New Vendor",
-    "CreateNewTeam": "Create New Team",
-    "AssignTrade": "Assign Trade",
-    "SendInvite": "Send Invitation",
-    "CreateDescription": "Please enter details of the person who will sign the contract, including their professional email address (no generic domains)",
-    "DeleteDescription": "Are you sure you want to delete this vendor?",
-
-    "CreateUser": "Create User",
-    "Role": "Role",
-    "Admin": "Admin",
-    "ProjectManager": "Project manager",
-    "Engineer": "Engineer",
-    "Create": "Create",
-    "Region": "Region",
-    "LastLogin": "Last Login",
-    "Active": "Active",
-    "Inactive": "Inactive",
-    "NotFound": "Not found",
-    "ConfirmDelete": "Are you sure you want to delete this user?",
-    "Delete": "Delete",
-    "Cancel": "Cancel",
-    "Confirm": "Confirm",
-    "EditUser": "Edit User",
-    "Save": "Save",
-
-    "ManageTrades": "Manage Trades",
-    "Photovoltaic": "Photovoltaic",
-    "HeatPump": "Heat Pump",
-    "SelectATrade": "Select a trade",
-    "Add": "Add",
+    "welcome": "Welcome at Galvanek Atlas",
+    "companyName": "SolarService GmbH",
+    "infoBox": "Please fill out the form below to provide your company's information and upload all required documents.",
+    "step": "Step",
+    "step1": "Company Details",
+    "step2": "Document Upload",
+    "step3": "Contract Signature",
+    "update": "Update",
+    "cancel": "Cancel",
+    "country": "Select Country",
+    "company": "Company Name",
+    "legalForm": "Select Legal Form",
+    "taxId": "Tax ID",
+    "street": "Street",
+    "houseNr": "House Number",
+    "apartmentNr": "Apartment Number",
+    "zip": "ZIP Code",
+    "city": "City",
+    "website": "Website URL",
+    "tradeTitle": "Employees per Trade",
+    "selectTrade": "Select Trade",
     "Dachdecker": "Roofer",
     "Glasfaser": "Fiber Optics",
     "GroßprojektPV": "Large-Scale PV Project",
@@ -131,31 +42,95 @@
     "Netzbau": "Network Construction",
     "Netzanmeldung": "Grid Connection Registration",
     "Photovoltaik/ACMontage": "Photovoltaic / AC Installation",
+    "tradeCount": "Number of Employees",
+    "addTrade": "Add Another Trade",
+    "regions": "Regions Covered",
+    "postcode": "Postcode",
+    "postcodeInfo": "If you cover entire states, switch to the States tab.",
+    "selectPostcode": "Select Postcode",
+    "add": "Add",
+    "remove": "Remove",
+    "radius": "Radius",
+    "states": "States",
+    "stateInfo": "If you operate in specific postal code areas, switch to the Postcode tab.",
+    "nationwide": "Nationwide",
+    "nationwideInfo": "Your services reach the whole country.",
+    "legalRep": "Legal Representative",
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "email": "Email",
+    "phone": "Phone Number",
+    "position": "Position",
+    "CEO": "CEO",
+    "Prokurist": "Prokurist",
+    "ManagingDirector": "Managing Director",
+    "BoardMember": "Board Member",
+    "AuthorizedSignatory": "Authorized Signatory",
+    "department": "Department",
+    "continue": "Continue",
+    "back": "Back",
+    "uploadDocumentsTitle": "Upload Required Documents",
+    "uploadDocumentsSubtitle": "Please upload your business documents for verification.",
+    "uploadNewFile": "Upload New File",
+    "submit": "Submit",
+    "chooseFile": "Choose file",
+    "noFileChosen": "No file chosen",
+    "notUploaded": "Not Uploaded Yet",
+    "uploaded": "Uploaded",
+    "approved": "Approved",
+    "denied": "Denied",
+    "inReview": "In Review",
+    "verified": "Verified on",
+    "contractSigningTitle": "Contract Signing Dashboard",
+    "contractSigningSubtitle": "Manage and track your contract signatures",
+    "dataEntry": "1. Data Entry",
+    "documentUpload": "2. Document Upload",
+    "signContracts": "3. Sign Contracts",
+    "contractsSentTo": "Contracts were sent to",
+    "pleaseSignAll": "Please sign all contracts (including the mandatory",
+    "toProceed": "to proceed.",
+    "signatureProgress": "Signature progress:",
+    "sent": "Sent",
+    "viewed": "Viewed",
+    "signed": "Signed",
+    "completed": "Completed",
+    "awaitingSignature": "Awaiting Signature",
+    "loadingCountries": "Loading countries...",
+    "loadingLegalForms": "Loading legal forms...",
+    "loadingTrades": "Loading trades...",
+    "errorLoading": "Error loading data. Please try again.",
+    "loadingRegions": "Loading regions...",
+    "selectRole": "Select roles",
+    "loadingPositions": "Loading positions...",
+    "loadingRequiredDocuments": "Loading required documents...",
 
-    "AddonTemplates": "Add on Templates",
-    "AddonTemplatesDescription": "Always required every vendor",
-    "Contract": "Contract",
-    "Policy": "Policy",
-    "Updated": "Updated",
-    "Scope-of-ServiceTemplates": "Scope of Service Templates",
-    "Scope-of-ServiceTemplatesDescription": "Select a service scope and upload",
-    "AddTemplateTitle": "Add Mandatory/Service Template",
-    "ChooseTemplateType": "Choose Template Type",
-    "Addon": "Add on",
-    "Service": "Service",
-    "TemplateName": "Template Name",
-    "TemplateID": "TemplateID",
-    "AddTemplate": "Add Template",
-    "ServiceAgreement": "Service Agreement",
-    "ErrorNotification": "Please fill all the fields",
+    "NotUploaded": "Not Uploaded",
+    "Approved": "Approved",
+    "Denied": "Denied",
+    "InReview": "In Review",
+    "IssuedBy": "Issued by",
+    "HowToObtain": "How to obtain",
+    "Appearance": "Appearance",
+    "RejectedBy": "Rejected by",
+    "on": "on",
+    "ClickToView": "Click to view",
+    "selectPDF": "Select PDF File",
+    "upload": "Upload",
+    "successNoti": "Document uploaded successfully",
 
-    "AcceptedLegalForm": "Accepted Legal Form",
-    "RequiredDocuments": "Required Documents",
+    "reviewNoti": "Please review and sign the contracts below to complete your onboarding process.",
+    "receivedAt": "Received at",
+    "waitingForVendorSignature": "Waiting for Vendor Signature",
+    "clickToSign": "Click to Sign",
 
-    "Timestamp": "Timestamp",
-    "LogType": "Log Type",
-    "Action": "Action",
+    "infoNotSaved": "Your information is not saved!",
+    "warningMessage": "Are you sure you want to move to the following step? Your changes will not be saved.",
+    "close": "Close",
+    "noNewNotifications": "No new notifications",
 
-    "Type": "Type",
-    "ConstructionSite": "Construction Site"
+    "successMessage": "All contracts have been successfully signed and completed.",
+    "readyForOnboarding": "Ready for onboarding: Please check the email and follow theinstructions for the next step.",
+    "waitingForContracts": "Waiting for contracts to be sent. Please check back later.",
+    "reviewMessage": "Please review and sign the contracts below to complete your onboarding process.",
+    "version": "Version"
 }
