--- a/public/locales/pol.json
+++ b/public/locales/pol.json
@@ -1,118 +1,29 @@
 {
-    "LoginTo": "Zaloguj się na swoje konto",
-    "GetStarted": "Zacznij korzystać z naszej aplikacji, po prostu załóż konto i ciesz się doświadczeniem",
-    "ResetPasswordMessage": "Wprowadź swój adres e-mail, a otrzymasz nowe dane uwierzytelniające pocztą elektroniczną",
-    "ResetPassword": "Zresetuj hasło",
-    "Email": "E-mail",
-    "Password": "Hasło",
-    "Country": "Kraj",
-    "CompanyName": "Nazwa firmy",
-    "Team": "Zespół",
-    "CompanyType": "Typ firmy",
-    "FederalState": "Państwo federalne",
-    "Street": "Ulica",
-    "House": "Dom",
-    "ZIPCode": "Kod pocztowy",
-    "TaxID": "Tax ID",
-    "Trade": "Handel",
-    "Employee": "Pracownik",
-    "City": "Miasto",
-    "Website": "Adres strony internetowej",
-    "WorkOption": "Opcja pracy",
-    "Next": "Dalej",
-    "Back": "Wstecz",
-    "SignIn": "Zaloguj się",
-    "Reset": "Nastawić",
-    "Or": "Lub",
-    "SignUp": "Zarejestruj się",
-    "Terms": "Warunki użytkowania",
-    "FirstName": "Imię",
-    "LastName": "Nazwisko",
-    "Phone": "Numer telefonu",
-    "Position": "Tytuł zawodowy",
-    "Department": "Dział",
-    "Description": "Opis",
-    "SubmitRegister": "Zatwierdź rejestrację",
-    "CompanyInfo": "Informacje o firmie",
-    "Representative": "Przedstawiciel",
-    "Documents": "Dokumenty",
-    "Complete": "Kompletny",
-    "ForgotPassword": "Zapomniałeś hasła?",
-
     "English": "Angielski",
     "Germany": "Niemcy",
     "Poland": "Polska",
     "Slovakia": "Słowacja",
-    "Profile": "Profil",
-    "Settings": "Ustawienia",
-    "LogOut": "Wyloguj się",
-
-    "Dashboard": "Panel",
-    "Vendors": "Dostawcy",
-    "UserManagement": "Zarządzanie użytkownikami",
-    "ScopeOfServicesAndTrades": "Zakres usług i transakcji",
-    "TemplateManagement": "Zarządzanie szablonami",
-    "CountryRequirements": "Wymagania krajowe",
-    "ActivityLog": "Dziennik aktywności",
-    "ProjectManagement": "Zarządzanie projektami",
-    "CompanyInformation": "Informacje o firmie",
-    "TeamManagement": "Zarządzanie zespołem",
-    "Customer/Construction": "Zarządzanie Klientami/Placem Budowy",
-    "AllVendors": "Wszyscy dostawcy",
-    "InvitedVendors": "Zaproszeni dostawcy",
-    "VendorWithDocumentSubmitted": "Dostawca z przesłanym dokumentem",
-    "CompanyDetailCompleted": "Szczegóły firmy ukończone",
-    "VendorsWithContractSubmitted": "Dostawcy z przesłaną umową",
-    "ReadyForExecution": "Gotowy do wykonania",
-
-    "FilterByStatus": "Filtruj według statusu",
-    "All": "Wszystko",
-    "Invited": "Zaproszony",
-    "DocumentsRejected": "Dokumenty odrzucone",
-    "DocumentUploaded": "Dokument przesłany",
-    "ProfileApproved": "Profil zatwierdzony",
-    "ProfileRejected": "Profil odrzucony",
-    "AllDocumentsApproved": "Wszystkie dokumenty zatwierdzone",
-    "WaitingForVendorSignature": "Oczekiwanie na podpis dostawcy",
-    "WaitingForGesysSignature": "Oczekiwanie na podpis Gesys",
-    "AllCompleted": "Wszystko ukończone",
-    "Name": "Nazwa",
-    "Contact": "Kontakt",
-    "ScopeOfServices": "Zakres Usług",
-    "Status": "Status",
-    "Since": "Od",
-    "NewVendor": "Nowy dostawca",
-    "Details": "Szczegóły",
-    "CreateNewVendor": "Utwórz nowego dostawcę",
-    "CreateNewTeam": "Utwórz nowy zespół",
-    "AssignTrade": "Przypisz handel",
-    "SendInvite": "Wyślij zaproszenie",
-    "CreateDescription": "Proszę wpisać dane osoby, która podpisze umowę, w tym jej służbowy adres e-mail (bez domen ogólnych)",
-    "DeleteDescription": "Czy na pewno chcesz usunąć tego dostawcę?",
-
-    "CreateUser": "Utwórz użytkownika",
-    "Role": "Rola",
-    "Admin": "Admin",
-    "ProjectManager": "Kierownik projektu",
-    "Engineer": "Inżynier",
-    "Create": "Utwórz",
-    "Region": "Region",
-    "LastLogin": "Ostatnie logowanie",
-    "Active": "Aktywny",
-    "Inactive": "Nieaktywny",
-    "NotFound": "Nie znaleziono",
-    "ConfirmDelete": "Czy na pewno chcesz usunąć tego użytkownika?",
-    "Delete": "Usuń",
-    "Cancel": "Anuluj",
-    "Confirm": "Potwierdź",
-    "EditUser": "Edytuj użytkownika",
-    "Save": "Zapisz",
-
-    "ManageTrades": "Zarządzaj transakcjami",
-    "Photovoltaic": "Fotowoltaika",
-    "HeatPump": "Pompa ciepła",
-    "SelectATrade": "Wybierz branżę",
-    "Add": "Dodaj",
+    "welcome": "Witamy w Galvanek Atlas",
+    "companyName": "SolarService GmbH",
+    "infoBox": "Proszę wypełnić poniższy formularz, aby podać informacje o firmie i przesłać wszystkie wymagane dokumenty.",
+    "step": "Krok",
+    "step1": "Dane firmy",
+    "step2": "Przesyłanie dokumentów",
+    "step3": "Podpisanie umowy",
+    "update": "Aktualizuj",
+    "cancel": "Anuluj",
+    "country": "Wybierz kraj",
+    "company": "Nazwa firmy",
+    "legalForm": "Wybierz formę prawną",
+    "taxId": "NIP",
+    "street": "Ulica",
+    "houseNr": "Nr domu",
+    "apartmentNr": "Nr mieszkania",
+    "zip": "Kod pocztowy",
+    "city": "Miasto",
+    "website": "Adres strony WWW",
+    "tradeTitle": "Pracownicy wg branży",
+    "selectTrade": "Wybierz branżę",
     "Dachdecker": "Dekarz",
     "Glasfaser": "Światłowód",
     "GroßprojektPV": "Duży projekt PV",
@@ -131,31 +42,92 @@
     "Netzbau": "Budowa sieci",
     "Netzanmeldung": "Zgłoszenie do sieci",
     "Photovoltaik/ACMontage": "Fotowoltaika / Montaż AC",
+    "tradeCount": "Liczba pracowników",
+    "addTrade": "Dodaj kolejną branżę",
+    "regions": "Obsługiwane regiony",
+    "postcode": "Kod pocztowy",
+    "postcodeInfo": "Jeśli obsługujesz całe województwa, przejdź do zakładki 'Województwa'.",
+    "selectPostcode": "Wybierz kod pocztowy",
+    "add": "Dodaj",
+    "remove": "Usuń",
+    "radius": "Promień",
+    "states": "Województwa",
+    "stateInfo": "Jeśli działasz w określonych obszarach kodów pocztowych, przejdź do zakładki 'Kod pocztowy'.",
+    "nationwide": "Ogólnokrajowy",
+    "nationwideInfo": "Twoje usługi obejmują cały kraj.",
+    "legalRep": "Pełnomocnik prawny",
+    "firstName": "Imię",
+    "lastName": "Nazwisko",
+    "email": "E-mail",
+    "phone": "Numer telefonu",
+    "position": "Stanowisko",
+    "CEO": "Dyrektor generalny",
+    "Prokurist": "Prokurent",
+    "ManagingDirector": "Dyrektor zarządzający",
+    "BoardMember": "Członek zarządu",
+    "AuthorizedSignatory": "Osoba upoważniona do podpisu",
+    "department": "Dział",
+    "continue": "Kontynuuj",
+    "back": "Wstecz",
+    "uploadDocumentsTitle": "Prześlij wymagane dokumenty",
+    "uploadDocumentsSubtitle": "Prosimy przesłać dokumenty firmowe do weryfikacji.",
+    "uploadNewFile": "Prześlij nowy plik",
+    "submit": "Wyślij",
+    "chooseFile": "Wybierz plik",
+    "noFileChosen": "Nie wybrano pliku",
+    "notUploaded": "Nie przesłano",
+    "uploaded": "Przesłano",
+    "approved": "Zatwierdzono",
+    "denied": "Odrzucono",
+    "inReview": "W trakcie weryfikacji",
+    "verified": "Zweryfikowano dnia",
+    "contractSigningTitle": "Panel podpisu umowy",
+    "contractSigningSubtitle": "Zarządzaj i śledź podpisy umów",
+    "dataEntry": "1. Wprowadzanie danych",
+    "documentUpload": "2. Przesyłanie dokumentów",
+    "signContracts": "3. Podpisz umowy",
+    "contractsSentTo": "Umowy wysłano do",
+    "pleaseSignAll": "Proszę podpisać wszystkie umowy (w tym obowiązkowe",
+    "toProceed": "aby kontynuować.",
+    "signatureProgress": "Postęp podpisów:",
+    "sent": "Wysłano",
+    "viewed": "Odczytano",
+    "signed": "Podpisano",
+    "completed": "Zakończono",
+    "awaitingSignature": "Oczekiwanie na podpis",
+    "loadingCountries": "Ładowanie krajów...",
+    "loadingLegalForms": "Ładowanie form prawnych...",
+    "loadingTrades": "Ładowanie branż...",
+    "errorLoading": "Błąd ładowania danych. Spróbuj ponownie.",
+    "loadingRegions": "Ładowanie regionów...",
+    "selectRole": "Wybierz role",
+    "loadingPositions": "Ładowanie stanowisk...",
+    "loadingRequiredDocuments": "Ładowanie wymaganych dokumentów...",
+    "NotUploaded": "Nie przesłano",
+    "Approved": "Zatwierdzono",
+    "Denied": "Odrzucono",
+    "InReview": "W trakcie weryfikacji",
+    "IssuedBy": "Wydane przez",
+    "HowToObtain": "Jak uzyskać",
+    "Appearance": "Wygląd",
+    "RejectedBy": "Odrzucone przez",
+    "on": "w",
+    "ClickToView": "Kliknij, aby zobaczyć",
+    "selectPDF": "Wybierz plik PDF",
+    "upload": "Prześlij",
+    "successNoti": "Dokument został pomyślnie przesłany",
+    "reviewNoti": "Proszę przejrzeć i podpisać poniższe umowy, aby zakończyć proces rejestracji.",
+    "receivedAt": "Otrzymano dnia",
+    "waitingForVendorSignature": "Oczekiwanie na podpis dostawcy",
+    "clickToSign": "Kliknij, aby podpisać",
+    "infoNotSaved": "Twoje informacje nie zostały zapisane!",
+    "warningMessage": "Czy na pewno chcesz przejść do następnego kroku? Twoje zmiany nie zostaną zapisane.",
+    "close": "Zamknij",
+    "noNewNotifications": "Brak nowych powiadomień",
 
-    "AddonTemplates": "Szablony dodatków",
-    "AddonTemplatesDescription": "Zawsze wymagane dla każdego dostawcy",
-    "Contract": "Umowa",
-    "Policy": "Polityka",
-    "Updated": "Zaktualizowano",
-    "Scope-of-ServiceTemplates": "Szablony zakresu usług",
-    "Scope-of-ServiceTemplatesDescription": "Wybierz zakres usług i prześlij",
-    "AddTemplateTitle": "Dodaj obowiązkowy lub usługowy szablon",
-    "ChooseTemplateType": "Wybierz typ szablonu",
-    "Addon": "Dodatek",
-    "Service": "Usługa",
-    "TemplateName": "Nazwa szablonu",
-    "TemplateID": "ID szablonu",
-    "AddTemplate": "Dodaj szablon",
-    "ServiceAgreement": "Umowa o świadczenie usług",
-    "ErrorNotification": "Proszę wypełnić wszystkie pola",
-
-    "AcceptedLegalForm": "Akceptowana forma prawna",
-    "RequiredDocuments": "Wymagane dokumenty",
-
-    "Timestamp": "Timestamp",
-    "LogType": "Typ dziennika",
-    "Action": "Action",
-
-    "Type": "Typ",
-    "ConstructionSite": "Plac budowy"
+    "successMessage": "Wszystkie umowy zostały pomyślnie podpisane i zakończone.",
+    "readyForOnboarding": "Gotowy do onboardingu: Sprawdź e-mail i postępuj zgodnie z instrukcjami dotyczącymi następnego kroku.",
+    "waitingForContracts": "Oczekiwanie na wysłanie umów. Proszę sprawdzić później.",
+    "reviewMessage": "Proszę przejrzeć i podpisać poniższe umowy, aby zakończyć proces rejestracji.",
+    "version": "Wersja"
 }
