--- a/public/locales/sk.json
+++ b/public/locales/sk.json
@@ -1,118 +1,29 @@
 {
-    "LoginTo": "Prihláste sa do svojho účtu",
-    "GetStarted": "Začnite s našou aplikáciou, stačí si vytvoriť účet a užívať si zážitok",
-    "ResetPasswordMessage": "Zadajte svoju e-mailovú adresu a potom vám budú zaslané nové poverenia e-mailom.",
-    "ResetPassword": "Obnoviť heslo",
-    "Email": "E-mail",
-    "Password": "Heslo",
-    "Country": "Krajina",
-    "CompanyName": "Názov spoločnosti",
-    "Team": "Tím",
-    "CompanyType": "Typ spoločnosti",
-    "FederalState": "Federálny štát",
-    "Street": "Ulica",
-    "House": "Dom",
-    "ZIPCode": "PSČ (poštové smerové číslo)",
-    "TaxID": "DIČ",
-    "Trade": "Obchod",
-    "Employee": "Zamestnanec",
-    "City": "Mesto",
-    "Website": "Webová adresa",
-    "WorkOption": "Pracovná možnosť",
-    "Next": "Ďalej",
-    "Back": "Späť",
-    "SignIn": "Prihlásiť sa",
-    "Reset": "Obnoviť",
-    "Or": "Alebo",
-    "SignUp": "Zaregistrovať sa",
-    "Terms": "Podmienky používania",
-    "FirstName": "Krstné meno",
-    "LastName": "Priezvisko",
-    "Phone": "Telefónne číslo",
-    "Position": "Pozícia",
-    "Department": "Oddelenie",
-    "Description": "Popis",
-    "SubmitRegister": "Odoslať registráciu",
-    "CompanyInfo": "Informácie o spoločnosti",
-    "Representative": "Zástupca",
-    "Documents": "Dokumenty",
-    "Complete": "Dokončené",
-    "ForgotPassword": "Zabudli ste heslo?",
-
     "English": "Angličtina",
     "Germany": "Nemecko",
     "Poland": "Poľsko",
     "Slovakia": "Slovensko",
-    "Profile": "Profil",
-    "Settings": "Nastavenia",
-    "LogOut": "Odhlásiť sa",
-    
-    "Dashboard": "Ovládací panel",
-    "Vendors": "Dodávatelia",
-    "UserManagement": "Správa používateľov",
-    "ScopeOfServicesAndTrades": "Rozsah služieb a obchodov",
-    "TemplateManagement": "Správa šablón",
-    "CountryRequirements": "Požiadavky krajiny",
-    "ActivityLog": "Záznam aktivít",
-    "ProjectManagement": "Projektový manažment",
-    "CompanyInformation": "Informácie o spoločnosti",
-    "TeamManagement": "Riadenie tímu",
-    "Customer/Construction": "Riadenie zákazníkov/staveniska",
-    "AllVendors": "Všetci dodávatelia",
-    "InvitedVendors": "Pozvaní dodávatelia",
-    "VendorWithDocumentSubmitted": "Dodávateľ s odoslaným dokumentom",
-    "CompanyDetailCompleted": "Podrobnosti o spoločnosti sú dokončené",
-    "VendorsWithContractSubmitted": "Dodávatelia s odoslanou zmluvou",
-    "ReadyForExecution": "Pripravené na vykonanie",
-
-    "FilterByStatus": "Filtrovať podľa stavu",
-    "All": "Všetko",
-    "Invited": "Pozvaný",
-    "DocumentsRejected": "Dokumenty zamietnuté",
-    "DocumentUploaded": "Dokument nahraný",
-    "ProfileApproved": "Profil schválený",
-    "ProfileRejected": "Profil zamietnutý",
-    "AllDocumentsApproved": "Všetky dokumenty schválené",
-    "WaitingForVendorSignature": "Čaká sa na podpis dodávateľa",
-    "WaitingForGesysSignature": "Čaká sa na podpis Gesys",
-    "AllCompleted": "Všetko dokončené",
-    "Name": "Meno",
-    "Contact": "Kontakt",
-    "ScopeOfServices": "Rozsah služieb",
-    "Status": "Stav",
-    "Since": "Od",
-    "NewVendor": "Nový dodávateľ",
-    "Details": "Podrobnosti",
-    "CreateNewVendor": "Vytvoriť nového dodávateľa",
-    "CreateNewTeam":"Vytvoriť nový tím",
-    "AssignTrade": "Priradiť obchod",
-    "SendInvite": "Odoslať pozvánku",
-    "CreateDescription": "Zadajte údaje o osobe, ktorá podpíše zmluvu, vrátane jej pracovnej e-mailovej adresy (žiadne generické domény)",
-    "DeleteDescription": "Ste si istý, že chcete tohto dodávateľa odstrániť?",
-
-    "CreateUser": "Vytvoriť používateľa",
-    "Role": "Rola",
-    "Admin": "Správca",
-    "ProjectManager": "Projektový manažér",
-    "Engineer": "Inžinier",
-    "Create": "Vytvoriť",
-    "Region": "Región",
-    "LastLogin": "Posledné prihlásenie",
-    "Active": "Aktívny",
-    "Inactive": "Neaktívny",
-    "NotFound": "Nenájdené",
-    "ConfirmDelete": "Ste si istý, že chcete tohto používateľa odstrániť?",
-    "Delete": "Odstrániť",
-    "Cancel": "Zrušiť",
-    "Confirm": "Potvrdiť",
-    "EditUser": "Upraviť používateľa",
-    "Save": "Uložiť",
-
-    "ManageTrades": "Spravovať obchody",
-    "Photovoltaic": "Fotovoltika",
-    "HeatPump": "Tepelné čerpadlo",
-    "SelectATrade": "Vyberte obchod",
-    "Add": "Pridať",
+    "welcome": "Vitajte v Galvanek Atlas",
+    "companyName": "SolarService GmbH",
+    "infoBox": "Vyplňte prosím nižšie uvedený formulár s informáciami o vašej spoločnosti a nahrajte všetky požadované dokumenty.",
+    "step": "Krok",
+    "step1": "Podrobnosti o spoločnosti",
+    "step2": "Nahrávanie dokumentov",
+    "step3": "Podpis zmluvy",
+    "update": "Aktualizovať",
+    "cancel": "Zrušiť",
+    "country": "Vyberte krajinu",
+    "company": "Názov spoločnosti",
+    "legalForm": "Vyberte právnu formu",
+    "taxId": "IČ DPH",
+    "street": "Ulica",
+    "houseNr": "Číslo domu",
+    "apartmentNr": "Číslo bytu",
+    "zip": "PSČ",
+    "city": "Mesto",
+    "website": "URL webovej stránky",
+    "tradeTitle": "Zamestnanci podľa odboru",
+    "selectTrade": "Vyberte odbor",
     "Dachdecker": "Strechár",
     "Glasfaser": "Optické vlákno",
     "GroßprojektPV": "Veľký fotovoltický projekt",
@@ -131,31 +42,95 @@
     "Netzbau": "Výstavba siete",
     "Netzanmeldung": "Prihlásenie do siete",
     "Photovoltaik/ACMontage": "Fotovoltika / AC montáž",
+    "tradeCount": "Počet zamestnancov",
+    "addTrade": "Pridať ďalší odbor",
+    "regions": "Pokryté regióny",
+    "postcode": "Poštové smerovacie číslo",
+    "postcodeInfo": "Ak pokrývate celé kraje, prepnite sa na kartu 'Kraje'.",
+    "selectPostcode": "Vyberte PSČ",
+    "add": "Pridať",
+    "remove": "Odstrániť",
+    "radius": "Polomer",
+    "states": "Kraje",
+    "stateInfo": "Ak pôsobíte v konkrétnych oblastiach poštových smerovacích čísel, prepnite sa na kartu 'PSČ'.",
+    "nationwide": "Celonárodné",
+    "nationwideInfo": "Vaše služby pokrývajú celé územie krajiny.",
+    "legalRep": "Právny zástupca",
+    "firstName": "Meno",
+    "lastName": "Priezvisko",
+    "email": "E-mail",
+    "phone": "Telefónne číslo",
+    "position": "Pozícia",
+    "CEO": "Generálny riaditeľ",
+    "Prokurist": "Prokurista",
+    "ManagingDirector": "Výkonný riaditeľ",
+    "BoardMember": "Člen predstavenstva",
+    "AuthorizedSignatory": "Osoba oprávnená podpisovať",
+    "department": "Oddelenie",
+    "continue": "Pokračovať",
+    "back": "Späť",
+    "uploadDocumentsTitle": "Nahrajte požadované dokumenty",
+    "uploadDocumentsSubtitle": "Prosím nahrajte obchodné dokumenty na overenie.",
+    "uploadNewFile": "Nahrať nový súbor",
+    "submit": "Odoslať",
+    "chooseFile": "Vybrať súbor",
+    "noFileChosen": "Nebol vybraný žiadny súbor",
+    "notUploaded": "Ešte nenahrané",
+    "uploaded": "Nahrané",
+    "approved": "Schválené",
+    "denied": "Zamietnuté",
+    "inReview": "Vo vyhodnocovaní",
+    "verified": "Overené dňa",
+    "contractSigningTitle": "Dashboard na podpisovanie zmlúv",
+    "contractSigningSubtitle": "Spravujte a sledujte podpisy zmlúv",
+    "dataEntry": "1. Zadávanie údajov",
+    "documentUpload": "2. Nahrávanie dokumentov",
+    "signContracts": "3. Podpísať zmluvy",
+    "contractsSentTo": "Zmluvy boli odoslané na",
+    "pleaseSignAll": "Prosím podpíšte všetky zmluvy (vrátane povinných",
+    "toProceed": "aby ste mohli pokračovať.",
+    "signatureProgress": "Priebeh podpisov:",
+    "sent": "Odoslané",
+    "viewed": "Zobrazené",
+    "signed": "Podpísané",
+    "completed": "Dokončené",
+    "awaitingSignature": "Čaká na podpis",
+    "loadingCountries": "Načítavam krajiny...",
+    "loadingLegalForms": "Načítavam právne formy...",
+    "loadingTrades": "Načítavam odbory...",
+    "errorLoading": "Chyba pri načítavaní údajov. Skúste znova.",
+    "loadingRegions": "Načítavam regióny...",
+    "selectRole": "Vyberte role",
+    "loadingPositions": "Načítavam pozície...",
+    "loadingRequiredDocuments": "Načítavam požadované dokumenty",
 
-    "AddonTemplates": "Šablóny doplnkov",
-    "AddonTemplatesDescription": "Vždy požadované pre každého dodávateľa",
-    "Contract": "Zmluva",
-    "Policy": "Smernica",
-    "Updated": "Aktualizované",
-    "Scope-of-ServiceTemplates": "Šablóny rozsahu služieb",
-    "Scope-of-ServiceTemplatesDescription": "Vyberte rozsah služieb a nahrajte",
-    "AddTemplateTitle": "Pridať povinnú/službovú šablónu",
-    "ChooseTemplateType": "Vyberte typ šablóny",
-    "Addon": "Doplnok",
-    "Service": "Služba",
-    "TemplateName": "Názov šablóny",
-    "TemplateID": "ID šablóny",
-    "AddTemplate": "Pridať šablónu",
-    "ServiceAgreement": "Zmluva o poskytovaní služieb",
-    "ErrorNotification": "Prosím, vyplňte všetky polia",
+    "NotUploaded": "Nenahrané",
+    "Approved": "Schválené",
+    "Denied": "Zamietnuté",
+    "InReview": "Vo vyhodnocovaní",
+    "IssuedBy": "Vydané kým",
+    "HowToObtain": "Ako získať",
+    "Appearance": "Vzhľad",
+    "RejectedBy": "Zamietnuté kým",
+    "on": "dňa",
+    "ClickToView": "Kliknite pre zobrazenie",
+    "selectPDF": "Vyberte PDF súbor",
+    "upload": "Nahrať",
+    "successNoti": "Dokument bol úspešne nahraný",
 
-    "AcceptedLegalForm": "Akceptovaná právna forma",
-    "RequiredDocuments": "Požadované dokumenty",
+    "reviewNoti": "Prosím, skontrolujte a podpíšte nižšie uvedené zmluvy, aby ste dokončili proces onboardingu.",
+    "receivedAt": "Prijaté dňa",
+    "waitingForVendorSignature": "Čakanie na podpis dodávateľa",
+    "clickToSign": "Kliknite na podpis",
 
-    "Timestamp": "Časová pečiatka",
-    "LogType": "Typ protokolu",
-    "Action": "Akcia",
+    "infoNotSaved": "Vaše informácie neboli uložené!",
+    "warningMessage": "Ste si istý, že chcete prejsť na nasledujúci krok? Vaše zmeny nebudú uložené.",
+    "close": "Zavrieť",
+    "noNewNotifications": "Žiadne nové oznámenia",
 
-    "Type": "Typ",
-    "ConstructionSite": "Stavenisko"
+    "successMessage": "Všetky zmluvy boli úspešne podpísané a dokončené.",
+    "readyForOnboarding": "Pripravený na onboarding: Skontrolujte e-mail a postupujte podľa pokynov pre ďalší krok.",
+    "waitingForContracts": "Čaká sa na odoslanie zmlúv. Skontrolujte to, prosím, neskôr.",
+    "reviewMessage": "Prosím, skontrolujte a podpíšte nižšie uvedené zmluvy, aby ste dokončili proces onboardingu.",
+    "version": "Verzia"
 }
