--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -1,118 +1,29 @@
 {
-    "LoginTo": "Melden Sie sich bei Ihrem Konto an",
-    "GetStarted": "Beginnen Sie mit unserer App, erstellen Sie einfach ein Konto und genießen Sie das Erlebnis",
-    "ResetPasswordMessage": "Geben Sie Ihre E-Mail-Adresse ein, dann können Sie neue Anmeldeinformationen per E-Mail erhalten",
-    "ResetPassword": "Passwort zurücksetzen",
-    "Email": "E-Mail",
-    "Password": "Passwort",
-    "Country": "Land",
-    "CompanyName": "Firmenname",
-    "Team": "Team",
-    "CompanyType": "Unternehmensart",
-    "FederalState": "Bundesstaat",
-    "Street": "Straße",
-    "House": "Haus",
-    "ZIPCode": "Postleitzahl",
-    "TaxID": "Steuernummer",
-    "Trade": "Gewerk",
-    "Employee": "Mitarbeiter",
-    "City": "Stadt",
-    "Website": "Website-URL",
-    "WorkOption": "Arbeitsoption",
-    "Next": "Weiter",
-    "Back": "Zurück",
-    "SignIn": "Anmelden",
-    "Reset": "Zurücksetzen",
-    "Or": "Oder",
-    "SignUp": "Registrieren",
-    "Terms": "Nutzungsbedingungen",
-    "FirstName": "Vorname",
-    "LastName": "Nachname",
-    "Phone": "Telefonnummer",
-    "Position": "Jobtitel",
-    "Department": "Abteilung",
-    "Description": "Beschreibung",
-    "SubmitRegister": "Registrierung abschicken",
-    "CompanyInfo": "Unternehmensinformationen",
-    "Representative": "Vertreter",
-    "Documents": "Dokumente",
-    "Complete": "Vollständig",
-    "ForgotPassword": "Passwort vergessen?",
-
     "English": "Englisch",
     "Germany": "Deutschland",
     "Poland": "Polen",
     "Slovakia": "Slowakei",
-    "Profile": "Profil",
-    "Settings": "Einstellungen",
-    "LogOut": "Abmelden",
-
-    "Dashboard": "Armaturenbrett",
-    "Vendors": "Lieferanten",
-    "UserManagement": "Benutzerverwaltung",
-    "ScopeOfServicesAndTrades": "Leistungs- und Gewerkeumfang",
-    "TemplateManagement": "Vorlagenverwaltung",
-    "CountryRequirements": "Länderanforderungen",
-    "ActivityLog": "Aktivitätsprotokoll",
-    "ProjectManagement": "Projektmanagement",
-    "CompanyInformation": "Unternehmensinformationen",
-    "TeamManagement": "Teammanagement",
-    "Customer/Construction": "Kunden-/Baustellenmanagement",
-    "AllVendors": "Alle Lieferanten",
-    "InvitedVendors": "Eingeladene Lieferanten",
-    "VendorWithDocumentSubmitted": "Lieferant mit eingereichtem Dokument",
-    "CompanyDetailCompleted": "Firmendetails abgeschlossen",
-    "VendorsWithContractSubmitted": "Lieferanten mit eingereichtem Vertrag",
-    "ReadyForExecution": "Bereit zur Ausführung",
-
-    "FilterByStatus": "Nach Status filtern",
-    "All": "Alle",
-    "Invited": "Eingeladen",
-    "DocumentsRejected": "Dokumente abgelehnt",
-    "DocumentUploaded": "Dokument hochgeladen",
-    "ProfileApproved": "Profil genehmigt",
-    "ProfileRejected": "Profil abgelehnt",
-    "AllDocumentsApproved": "Alle Dokumente genehmigt",
-    "WaitingForVendorSignature": "Warten auf Unterschrift des Anbieters",
-    "WaitingForGesysSignature": "Warten auf Gesys-Unterschrift",
-    "AllCompleted": "Alle abgeschlossen",
-    "Name": "Name",
-    "Contact": "Kontakt",
-    "ScopeOfServices": "Leistungsumfang",
-    "Status": "Status",
-    "Since": "Seit",
-    "NewVendor": "Neuer Anbieter",
-    "Details": "Einzelheiten",
-    "CreateNewVendor": "Neuen Lieferanten anlegen",
-    "CreateNewTeam": "Neues Team erstellen",
-    "AssignTrade": "Handel zuweisen",
-    "SendInvite": "Einladung senden",
-    "CreateDescription": "Bitte geben Sie die Daten der Person ein, die den Vertrag unterzeichnen wird, einschließlich ihrer beruflichen E-Mail-Adresse (keine generischen Domänen)",
-    "DeleteDescription": "Sind Sie sicher, dass Sie diesen Anbieter löschen möchten?",
-
-    "CreateUser": "Benutzer erstellen",
-    "Role": "Rolle",
-    "Admin": "Admin",
-    "ProjectManager": "Projektmanager",
-    "Engineer": "Ingenieur",
-    "Create": "Erstellen",
-    "Region": "Region",
-    "LastLogin": "Letzte Anmeldung",
-    "Active": "Aktiv",
-    "Inactive": "Inaktiv",
-    "NotFound": "Nicht gefunden",
-    "ConfirmDelete": "Sind Sie sicher, dass Sie diesen Benutzer löschen möchten?",
-    "Delete": "Löschen",
-    "Cancel": "Abbrechen",
-    "Confirm": "Bestätigen",
-    "EditUser": "Benutzer bearbeiten",
-    "Save": "Speichern",
-
-    "ManageTrades": "Geschäfte verwalten",
-    "Photovoltaic": "Photovoltaik",
-    "HeatPump": "Wärmepumpe",
-    "SelectATrade": "Wählen Sie ein Gewerke",
-    "Add": "Hinzufügen",
+    "welcome": "Willkommen bei Galvanek Atlas",
+    "companyName": "SolarService GmbH",
+    "infoBox": "Bitte füllen Sie das folgende Formular aus, um die Informationen Ihres Unternehmens anzugeben und alle erforderlichen Dokumente hochzuladen.",
+    "step": "Schritt",
+    "step1": "Firmendaten",
+    "step2": "Dokumentenupload",
+    "step3": "Vertragsunterzeichnung",
+    "update": "Aktualisieren",
+    "cancel": "Abbrechen",
+    "country": "Land auswählen",
+    "company": "Firmenname",
+    "legalForm": "Rechtsform auswählen",
+    "taxId": "Steuer-ID",
+    "street": "Straße",
+    "houseNr": "Hausnummer",
+    "apartmentNr": "Wohnungsnummer",
+    "zip": "Postleitzahl",
+    "city": "Stadt",
+    "website": "Website-URL",
+    "tradeTitle": "Mitarbeiter pro Gewerk",
+    "selectTrade": "Gewerk auswählen",
     "Dachdecker": "Dachdecker",
     "Glasfaser": "Glasfaser",
     "GroßprojektPV": "Großprojekt PV",
@@ -131,31 +42,95 @@
     "Netzbau": "Netzbau",
     "Netzanmeldung": "Netzanmeldung",
     "Photovoltaik/ACMontage": "Photovoltaik / AC Montage",
+    "tradeCount": "Anzahl Mitarbeiter",
+    "addTrade": "Weiteres Gewerk hinzufügen",
+    "regions": "Abgedeckte Regionen",
+    "postcode": "Postleitzahl",
+    "postcodeInfo": "Wenn Sie ganze Bundesländer abdecken, wechseln Sie zum Tab 'Bundesländer'.",
+    "selectPostcode": "Postleitzahl auswählen",
+    "add": "Hinzufügen",
+    "remove": "Entfernen",
+    "radius": "Radius",
+    "states": "Bundesländer",
+    "stateInfo": "Wenn Sie in bestimmten Postleitzahlgebieten tätig sind, wechseln Sie zum Tab 'Postleitzahl'.",
+    "nationwide": "Landesweit",
+    "nationwideInfo": "Ihre Dienstleistungen decken das ganze Land ab.",
+    "legalRep": "Gesetzlicher Vertreter",
+    "firstName": "Vorname",
+    "lastName": "Nachname",
+    "email": "E-Mail",
+    "phone": "Telefonnummer",
+    "position": "Position",
+    "CEO": "Geschäftsführer",
+    "Prokurist": "Prokurist",
+    "ManagingDirector": "Geschäftsführender Direktor",
+    "BoardMember": "Vorstandsmitglied",
+    "AuthorizedSignatory": "Zeichnungsberechtigter",
+    "department": "Abteilung",
+    "continue": "Weiter",
+    "back": "Zurück",
+    "uploadDocumentsTitle": "Erforderliche Dokumente hochladen",
+    "uploadDocumentsSubtitle": "Bitte laden Sie Ihre Geschäftsdokumente zur Überprüfung hoch.",
+    "uploadNewFile": "Neue Datei hochladen",
+    "submit": "Absenden",
+    "chooseFile": "Datei auswählen",
+    "noFileChosen": "Keine Datei ausgewählt",
+    "notUploaded": "Noch nicht hochgeladen",
+    "uploaded": "Hochgeladen",
+    "approved": "Genehmigt",
+    "denied": "Abgelehnt",
+    "inReview": "In Prüfung",
+    "verified": "Verifiziert am",
+    "contractSigningTitle": "Vertragsunterzeichnungs-Dashboard",
+    "contractSigningSubtitle": "Verträge verwalten und unterschreiben",
+    "dataEntry": "1. Dateneingabe",
+    "documentUpload": "2. Dokumentenupload",
+    "signContracts": "3. Verträge unterschreiben",
+    "contractsSentTo": "Verträge wurden gesendet an",
+    "pleaseSignAll": "Bitte unterschreiben Sie alle Verträge (einschließlich der obligatorischen",
+    "toProceed": "um fortzufahren.",
+    "signatureProgress": "Unterschriftenfortschritt:",
+    "sent": "Gesendet",
+    "viewed": "Angesehen",
+    "signed": "Unterschrieben",
+    "completed": "Abgeschlossen",
+    "awaitingSignature": "Warten auf Unterschrift",
+    "loadingCountries": "Lade Länder...",
+    "loadingLegalForms": "Lade Rechtsformen...",
+    "loadingTrades": "Lade Gewerke...",
+    "errorLoading": "Fehler beim Laden der Daten. Bitte versuchen Sie es erneut.",
+    "loadingRegions": "Lade Regionen...",
+    "selectRole": "Rollen auswählen",
+    "loadingPositions": "Lade Positionen...",
+    "loadingRequiredDocuments": "Lade erforderliche Dokumente...",
 
-    "AddonTemplates": "Zusatzvorlagen",
-    "AddonTemplatesDescription": "Für jeden Anbieter immer erforderlich",
-    "Contract": "Vertrag",
-    "Policy": "Richtlinie",
-    "Updated": "Aktualisiert",
-    "Scope-of-ServiceTemplates": "Leistungsumfang-Vorlagen",
-    "Scope-of-ServiceTemplatesDescription": "Leistungsumfang auswählen und hochladen",
-    "AddTemplateTitle": "Obligatorische/Dienstleistungs-Vorlage hinzufügen",
-    "ChooseTemplateType": "Vorlagentyp auswählen",
-    "Addon": "Zusatzleistung",
-    "Service": "Dienstleistung",
-    "TemplateName": "Vorlagenname",
-    "TemplateID": "Vorlagen-ID",
-    "AddTemplate": "Vorlage hinzufügen",
-    "ServiceAgreement": "Dienstleistungsvertrag",
-    "ErrorNotification": "Bitte füllen Sie alle Felder aus",
+    "NotUploaded": "Nicht hochgeladen",
+    "Approved": "Genehmigt",
+    "Denied": "Abgelehnt",
+    "InReview": "In Prüfung",
+    "IssuedBy": "Ausgestellt von",
+    "HowToObtain": "Wie zu erhalten",
+    "Appearance": "Aussehen",
+    "RejectedBy": "Abgelehnt von",
+    "on": "am",
+    "ClickToView": "Klicken zum Anzeigen",
+    "selectPDF": "PDF-Datei auswählen",
+    "upload": "Hochladen",
+    "successNoti": "Dokument erfolgreich hochgeladen",
 
-    "AcceptedLegalForm": "Anerkannte Rechtsform",
-    "RequiredDocuments": "Erforderliche Dokumente",
+    "reviewNoti": "Bitte überprüfen und unterschreiben Sie die untenstehenden Verträge, um Ihren Onboarding-Prozess abzuschließen.",
+    "receivedAt": "Empfangen am",
+    "waitingForVendorSignature": "Warten auf Unterschrift des Lieferanten",
+    "clickToSign": "Zum Unterschreiben klicken",
 
-    "Timestamp": "Zeitstempel",
-    "LogType": "Protokolltyp",
-    "Action": "Aktion",
+    "infoNotSaved": "Ihre Informationen wurden nicht gespeichert!",
+    "warningMessage": "Sind Sie sicher, dass Sie zum nächsten Schritt wechseln möchten? Ihre Änderungen werden nicht gespeichert.",
+    "close": "Schließen",
+    "noNewNotifications": "Keine neuen Benachrichtigungen",
 
-    "Type": "Typ",
-    "ConstructionSite": "Baustelle"
+    "successMessage": "Alle Verträge wurden erfolgreich unterschrieben und abgeschlossen.",
+    "readyForOnboarding": "Bereit für das Onboarding: Bitte überprüfen Sie die E-Mail und folgen Sie den Anweisungen für den nächsten Schritt.",
+    "waitingForContracts": "Warten auf den Versand der Verträge. Bitte später erneut überprüfen.",
+    "reviewMessage": "Bitte überprüfen und unterschreiben Sie die untenstehenden Verträge, um Ihren Onboarding-Prozess abzuschließen.",
+    "version": "Version"
 }
